# silicon

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/templates/: formula.rb.template
.github/workflows/: pr.yml  release.yml  test.yml
scripts/: build.sh  qr.py
src/silicon/: __init__.py  __main__.py  cli.py  tools.py
tests/: conftest.py  smoke.py  test_cli.py  test_tools.py
