[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "silicon"
version = "0.0.0"  # Injected from git tag at build time
description = "A Python CLI hello world template"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Krish Suchak" }
]
keywords = ["cli", "template", "hello-world", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer>=0.20.1",
]

[project.urls]
Homepage = "https://github.com/alkalescent/silicon"
Repository = "https://github.com/alkalescent/silicon"
Issues = "https://github.com/alkalescent/silicon/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/silicon"]

[project.scripts]
# Entry point command uses package name from [project].name
silicon = "silicon.cli:app"

[dependency-groups]
dev = ["pytest", "pytest-xdist", "pytest-cov", "nuitka", "ordered-set", "ruff", "packaging"]

[tool.pytest.ini_options]
addopts = "-n auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", ".venv/*", "build/*", "scripts/*", "*/__main__.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "except PackageNotFoundError:",
    'if __name__ == "__main__":',
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations (type hints)
    "D",      # pydocstyle (docstrings)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "ANN401", # dynamically typed expressions (Any)
    "D100",   # missing docstring in public module
    "D104",   # missing docstring in public package
    "D203",   # 1 blank line required before class docstring (conflicts with D211)
    "D213",   # multi-line docstring summary should start at second line (conflicts with D212)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "D"]  # Don't require annotations/docstrings in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
